<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="12dp"
    android:paddingLeft="7dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/iv_deploy_want"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/fabuxuqiudi" />


        <TextView
            android:background="@mipmap/fabubeijing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:layout_marginTop="7dp"
            android:text="@string/publish_need"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            android:drawableRight="@mipmap/chakan" />
        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_marginTop="7dp"-->
            <!--android:src="@mipmap/fabuxuqiu_bar" />-->
    </RelativeLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="2dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/iv_competitive"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/shangjiajingbiaodi" />

            <TextView
                android:background="@mipmap/fabubeijing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_marginTop="7dp"
                android:text="@string/needbid"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12"
                android:drawableRight="@mipmap/chakan" />

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_marginTop="7dp"-->
                <!--android:src="@mipmap/shangjiajingbiao_bar" />-->
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/iv_customer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/kefuzixundi" />

                <TextView
                    android:background="@mipmap/fabubeijing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:layout_marginTop="7dp"
                    android:text="@string/custom_service"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12"
                    android:drawableRight="@mipmap/chakan" />

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_marginTop="7dp"-->
                    <!--android:src="@mipmap/kefuzixun_bar" />-->
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/iv_store"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/quanbufenleidi" />

                <TextView
                    android:id="@+id/tv_store"
                    android:background="@mipmap/fabubeijing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:layout_marginTop="7dp"
                    android:text="@string/apply_store"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12"
                    android:drawableRight="@mipmap/chakan" />

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_marginTop="7dp"-->
                    <!--android:src="@mipmap/quanbufenlei_bar" />-->
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>