<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:dsw="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <com.soonphe.timber.view.widget.titlebar.AppTitle
                style="@style/title_style"
                app:canFinish="true"
                app:centreText="关于"
                app:centreTextColor="@color/white"
                app:showBack="true" />
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_collapseMode="parallax">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0eff4"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ci_user_pic"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/logo" />

                <TextView
                    android:id="@+id/tv_nikeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="timber-android"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_invite_friends"
            style="@style/item_style_with_foreg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableStart="@mipmap/fasongmingpian"
                android:drawablePadding="8dp"
                android:paddingLeft="10dp"
                android:text="@string/github"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:text="github.com/soonphe/timber-android"
                android:textColor="#999999"
                android:textSize="@dimen/text_size_16" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_send_card"
            style="@style/item_style_with_foreg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableStart="@mipmap/yaoqinghaoyou"
                android:drawablePadding="8dp"
                android:paddingLeft="10dp"
                android:text="@string/developer"
                android:textColor="@color/text_black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:text="soonphe"
                android:textColor="#999999"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_certification"
            style="@style/item_style_with_foreg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableStart="@mipmap/shimingyanzheng"
                android:drawablePadding="8dp"
                android:paddingLeft="10dp"
                android:text="@string/contact_information"
                android:textColor="@color/text_black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:text="soonphe@gmail.com"
                android:textColor="#576b95"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/item_style_with_foreg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableStart="@mipmap/shimingyanzheng"
                android:drawablePadding="8dp"
                android:paddingLeft="10dp"
                android:text="@string/contact_information"
                android:textColor="@color/text_black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:text="soonphe@icloud.com"
                android:textColor="#576b95"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>
    </LinearLayout>

    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="15dp"></androidx.legacy.widget.Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/dp_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="GitHub @ soonphe"
            android:textColor="#576b95"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Copyright © 2018 soonphe"
            android:textColor="#999999"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>